--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es"> 
 <head>
 	<meta charset="utf-8">
-	<title>CCT</title>
+	<title></title>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" href="css/style.css">
@@ -47,7 +47,6 @@
 
 
 
-g
 
 
 
