--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="container" id="app">s
   <div class="left">
     <div class="input-wrapper">
-      <input autocomplete="off" type="text" class="search" id="search" placeholder="Ingresa el numero de clausula"/>
+      <input autocomplete="off" type="text" class="search" id="search" placeholder="Número de claúsula"/>
       <button id="magnify" v-on:click="search"><svg class="icon icon--search"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"></use></svg></button>
 
     </div>
