--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
+
+
+	<!-- Jquery !-->
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-	<link rel="stylesheet" href="css/style.css">
+	<!-- FONT AWESOME !-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 
+	<link rel="stylesheet" href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale-1">
 
 	
@@ -14,16 +19,17 @@
 <body ondragstart="return false" onselectstart="return false" oncontextmenu="return false">
 
 <!-- icon search !-->
-<div class="container" id="app">s
+<div class="container" id="app">
+
   <div class="left">
     <div class="input-wrapper">
       <input autocomplete="off" type="text" class="search" id="search" placeholder="Número de claúsula"/>
-      <button id="magnify" v-on:click="search"><svg class="icon icon--search"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"></use></svg></button>
-
+      <button id="magnify" v-on:click="search"><svg class="icon icon--search"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-search"></use></svg>
+      </button>
     </div>
   </div>
-</div>
 
+</div>
 <svg class="hidden">
 			<defs>
 				<symbol id="icon-search" viewBox="0 0 24 24">
@@ -36,7 +42,11 @@
 
 <!-- icon search !-->
 
-<center><table border="0" width="90%">
+<center>
+	<table border="0" width="90%">
+
+		<i class="btn-home fas fa-home"></i>
+
 		<tr>
 			<td><br><h1 text align="center">CONTRATO COLECTIVO DE TRABAJO</h1></font></center></td>
 		</tr>
