--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 <center>
 	<table border="0" width="90%">
 
-		<i class="btn-home fas fa-home"></i>
+	
+		<i class="btn-home fas fa-arrow-circle-up"></i>
 
 		<tr>
 			<td><br><h1 text align="center">CONTRATO COLECTIVO DE TRABAJO</h1></font></center></td>
