--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 	<table border="0" width="90%">
 
 	
-		<i class="btn-home fas fa-arrow-circle-up"></i>
-
+		<a href="#"><i class="btn-home fas fa-arrow-circle-up"></i></a>
 		<tr>
 			<td><br><h1 text align="center">CONTRATO COLECTIVO DE TRABAJO</h1></font></center></td>
 		</tr>
