--- a/index.html
+++ b/index.html
@@ -1646,7 +1646,7 @@
 			</tr>
 
 			<tr><td>
-			<p><br><br/><strong><a name="clausula185">CLAUSULA 185</a></strong>&nbsp;&nbsp;&nbsp;
+			<p style="text-align: justify;"><br><br/><strong><a name="clausula185">CLAUSULA 185</a></strong>&nbsp;&nbsp;&nbsp;
  			Empresa y Sindicato se sujetarán a lo dispuesto en los Artículos 153-A al 153-X del Capítulo III-Bis, Título Cuarto de la Ley Federal del Trabajo, a lo establecido en los Perfiles de Puesto, así como a los acuerdos tomados por la Comisión Mixta Nacional de Capacitación y Adiestramiento (COMNCA).<br></br>
 			
 			<center><strong>GENERALIDADES</strong></center>
@@ -1839,18 +1839,117 @@
 
 			<tr><td>
 				<p><br><br/><strong><a name="clausula191">CLAUSULA 191</a></strong>&nbsp;&nbsp;&nbsp;
+					Cuando alguna operadora deje de laborar en jornada nocturna y pase a trabajar como operadora de la jornada diurna, percibirá como remuneración el salario que le corresponde de acuerdo con los meses de servicio. 
 				</p>
 			</tr>
 
 			<tr><td>
-				<p><br><br/><strong><a name="clausula192">CLAUSULA 192</a></strong>&nbsp;&nbsp;&nbsp;
+				<p><br><br/><strong><a name="clausula192">CLAUSULA 192</a></strong>&nbsp;&nbsp;&nbsp;La Empresa contratará con una Compañía de Seguros legalmente autorizada, un Seguro de Vida de Grupo para el personal activo y jubilado. Este seguro será por la cantidad de $539,530.16 (Quinientos treinta y nueve mil quinientos treinta pesos 16/100 M.N.) por muerte ordinaria; y de $1’079,057.20 (Un millón setenta y nueve mil cincuenta y siete pesos 20/100 M.N.) en caso de muerte accidental; y de $1’618,584.24 (Un millón seiscientos dieciocho mil quinientos ochenta y cuatro pesos 24/100 M.N.) por muerte colectiva; asimismo, de $359,685.04 (Trescientos cincuenta y nueve mil seiscientos ochenta y cinco pesos 04/100 M.N.) por invalidez. <br></br>
+				La Empresa designará libremente a la Compañía Aseguradora y cubrirá íntegramente las cuotas correspondientes.
 				</p>
 			</tr>
 
 			<tr><td>
-				<p><br><br/><strong><a name="clausula193">CLAUSULA 193</a></strong>&nbsp;&nbsp;&nbsp;
+				<p><br><br/><strong><a name="clausula193">CLAUSULA 193</a></strong>&nbsp;&nbsp;&nbsp;Cuando la Empresa decida implantar los proyectos de modernización, nueva tecnología y/o nuevos servicios que juzgue convenientes, informará amplia y oportunamente sobre los mismos al Sindicato para efectos de difusión y capacitación del personal sindicalizado que sea requerido, quien deberá realizar y atender todas las funciones y labores inherentes que se deriven de dichos proyectos.<br></br>
+				Para tal efecto, se conviene en que la información al Sindicato será proporcionada a través de la Comisión Mixta Nacional de Capacitación y Adiestramiento, la cual será la responsable de vigilar que se cubran las necesidades de capacitación técnica, operativa y/o administrativa para la introducción de los proyectos y equipos que la Empresa haya definido.<br></br>
+				La información al Sindicato, le será proporcionada con quince días de anticipación a la introducción del proyecto a través de la COMNCA y deberá contener los siguientes aspectos:<br></br>
+
+					<center><table border="0" width="85%">
+					<tr>
+					<td>
+					<p>
+					- Nombre del proyecto y objetivo del mismo.<br></br>	
+					- Presentación por el responsable de la implementación del proyecto.<br></br>
+					- Fecha estimada para la puesta en servicio y tiempo estimado para su 	 introducción completa en la planta telefónica.<br></br>
+					-	 De proceder, implementación de la prueba piloto.<br></br>
+					- Estimación sobre los impactos y condiciones laborales que se prevean.<br></br>
+					- Normas sobre las condiciones de Higiene y Seguridad recomendadas por los proveedores y con las que cuente la Empresa.<br></br>
+					- Nombre de las especialidades y categorías involucradas.<br></br>
+					- Número de participantes por especialidad, categorías y localidad.<br></br>
+					- Carátulas de los cursos y contenido.<br></br>
+					- Fecha de inicio de la capacitación.<br></br>
+					</p></td></tr></table></center>	
+
+				Empresa y Sindicato acordarán el programa de difusión conjunta.<br></br>
+				La COMNCA será la responsable de evaluar el seguimiento, desarrollo y aplicación de la capacitación referida a los proyectos, así como de la difusión de los mismos, valiéndose de las estructuras y acuerdos que ya se tienen establecidos, utilizando la ayuda de folletos y/o audiovisuales de acuerdo a lo convenido en el actual modelo de capacitación.<br></br>
+				Dicha capacitación se impartirá a las personas de la o las categorías necesarias para el establecimiento y atención futura de los proyectos de acuerdo a los requerimientos de los mismos. La capacitación se llevará a cabo conforme lo requiera la introducción de los nuevos proyectos, equipos y/o nuevos servicios.<br></br>
+				En los casos en los que se modifiquen en forma importante las condiciones de trabajo derivadas del establecimiento de nuevos proyectos, se revisará el Perfil del Puesto que corresponda de acuerdo a lo estipulado en este Contrato Colectivo de Trabajo.<br></br>
+				La Empresa dará acceso a personal sindicalizado de alta especialización en actividades de investigación y desarrollo, debiéndose establecer el procedimiento correspondiente.<br></br>
+				Respecto a proyectos de nueva tecnología, el Sindicato contará con un grupo asesor compuesto de cinco personas designadas libremente por el propio Sindicato. 
 				</p>
 			</tr>
+
+			<tr><td>
+				<p><br><br/><strong><a name="clausula194">CLAUSULA 194</a></strong>&nbsp;&nbsp;&nbsp;Suprimida.
+				</p>
+			</tr>
+
+			<tr><td>
+				<p><br><br/><strong><a name="clausula195">CLAUSULA 195</a></strong>&nbsp;&nbsp;&nbsp;Sin que los términos de la presente cláusula impliquen cogestión en la toma de las decisiones para la administración de Telmex, Empresa y Sindicato acuerdan impulsar un programa para la permanente elevación y mejoramiento de la calidad, productividad y la competitividad en las diferentes áreas que la conforman, considerando que la productividad y competitividad es consecuencia de la óptima articulación entre el incremento cuantitativo y cualitativo de la producción, el mejoramiento de la calidad, de las condiciones de trabajo y de vida, así como de la capacitación productiva del propio trabajador.<br></br>
+				El objetivo fundamental del programa es el cumplimiento de las metas corporativas de calidad y productividad de la Empresa tanto del Título de Concesión, como las derivadas de la competitividad y satisfacción del cliente.<br></br>
+				El programa será permanente y de aplicación general, por lo que incluye a todos los trabajadores de las diferentes especialidades; dinámico en el establecimiento de las bases de aplicación, de acuerdo con los cambios en los procesos y en la productividad global y flexible para ajustarse a las necesidades de la transformación de los diferentes procesos productivos, pudiéndose modificar y corregirse en el transcurso de su instrumentación.<br></br>
+				Este programa forma parte integral del presente contrato. El programa contendrá las normas de productividad y calidad, así como los indicadores y los sistemas de medición, adicionalmente estipulará los incentivos económicos asignados a cada una de las áreas tronco y su forma de distribución individual o colectiva.<br></br> 
+				Ratifican la constitución de una Comisión Mixta Nacional de Calidad, Productividad y Competitividad integrada por cinco Representantes de la Empresa y cinco del Sindicato, la cual contará con todas las facilidades para realizar su función. Esta comisión será responsable del diseño, instrumentación y seguimiento de los aspectos generales del programa, del estudio de normas de productividad, competitividad y sus sistemas de medición y el estudio de los esquemas de medición o reparto de incentivos tanto individuales como colectivos, así como lo respectivo a la constitución de los grupos de análisis.<br></br> 
+				La comisión tendrá por objetivo el diseño y establecimiento de una nueva filosofía de trabajo, que lo revalore como factor esencial del desarrollo de la Empresa y a través de la cual se propicie la formación de una nueva cultura laboral.<br></br>
+				La comisión presentará a la Dirección de la Empresa, cuando ésta juzgue necesario, sus informes de avance y conclusiones para el mejoramiento de la calidad del servicio, el mejoramiento de las condiciones de trabajo, de vida y de capacitación productiva de los trabajadores, tomando en cuenta para ello las recomendaciones de los grupos de análisis. Convienen Empresa y Sindicato impulsar la creación y desarrollo de grupos de análisis, en todas las especialidades en los términos que se acuerden.<br></br>
+				Los grupos de análisis podrán emitir recomendaciones que propicien el mejoramiento de la Calidad, Productividad y Competitividad y el cumplimiento de metas en su centro o unidad de trabajo, acorde a los requerimientos de las diversas áreas de la Empresa.<br></br>
+				Para el cumplimiento de los objetivos de Calidad, Productividad y Competitividad, es indispensable la capacitación específica, la que se estructurará principalmente en torno a los siguientes temas:<br></br>
+					<center><table border="0" width="85%">
+					<tr>
+					<td>
+					<p>
+					<strong>a)</strong>Control Estadístico de la Calidad, Productividad y Competitividad.<br></br>
+					<strong>b)</strong>Principios de la Organización de Trabajo.<br></br>
+					<strong>c)</strong>Sistemas de Operación y Mantenimiento de la Planta.<br></br>
+					<strong>d)</strong>Normalización y Estandarización de Equipos, Herramientas y Sistemas de Trabajo.<br></br>
+					</p></td></tr></table></center>	
+
+				</p>
+			</tr>
+
+			<tr><td>
+				<p><br><br/><strong><a name="clausula196">CLAUSULA 196</a></strong>&nbsp;&nbsp;&nbsp;Derivado del contexto Internacional actual en materia de Derechos Humanos, Empresa y Sindicato ratifican su compromiso de mantener un entorno laboral donde el respeto a la dignidad humana, la igualdad de trato y la no discriminación formen parte de los principios de conducta a seguir en la Empresa.<br></br>
+				En consecuencia, se comprometen a realizar acciones conjuntas para erradicar, prevenir y/o evitar posibles conductas de violencia laboral, discriminación, hostigamiento y acoso sexual y a difundir las Leyes aplicables al respecto, a través del Medio Interno de Comunicación de la Empresa (INTRANET) y el Sistema de Información Sindical del STRM. <br></br>
+				Asimismo, acuerdan su disposición de atender oportunamente los casos que se presenten al respecto, en un marco de confianza, confidencialidad y respeto a la vida privada y laboral de las personas involucradas en la queja; buscando la mejor solución, considerando los términos del Artículo 3° Bis y demás relativos de la Ley Federal del Trabajo, Contrato Colectivo de Trabajo, Reglamento Interior de Trabajo y demás legislaciones correspondientes.
+				La Empresa reitera el cumplimiento a las disposiciones legales sobre el trabajo digno o decente y la no discriminación, en términos de los Artículos 2°, 3°, 133 fracción I y demás relativos y aplicables de la Ley Federal del Trabajo y Legislaciones correspondientes.<br></br>
+				</p>
+			</tr>
+
+			<tr><td>
+				<p><br><br/><strong><a name="clausula196bis">CLAUSULA 196-BIS</a></strong>&nbsp;&nbsp;&nbsp;
+					La Empresa ratifica el compromiso de mantener el respeto a la igualdad de trato y de oportunidades en el ámbito laboral entre mujeres y hombres, dando cumplimiento a las disposiciones legales sobre el trabajo digno o decente, entendiéndose por éste, aquél en el que se respeta plenamente la dignidad humana del trabajador; no existe discriminación por origen étnico o nacional, género, edad, discapacidad, condición social, condiciones de salud, religión, condición migratoria, opiniones, preferencias sexuales o estado civil; se tiene acceso a la seguridad social y se percibe un salario remunerador, se recibe capacitación continua para el incremento de la productividad con beneficios compartidos, y se cuenta con condiciones óptimas de seguridad e higiene para prevenir riesgos de trabajo.<br></br>
+					Y de igual forma reitera el cumplimiento a las disposiciones legales sobre igualdad sustantiva, entendiéndose por ésta, la que se logra eliminando la discriminación contra las mujeres que menoscaba o anula el reconocimiento, goce o ejercicio de sus derechos humanos y las libertades fundamentales en el ámbito laboral. Supone el acceso a las mismas oportunidades, considerando las diferencias biológicas, sociales y culturales de mujeres y hombres; lo anterior, de conformidad con lo establecido en el Artículo 2° de la Ley Federal del Trabajo y demás relativos en la Legislación correspondiente.<br></br>
+				</p>
+			</tr>
+
+			<tr><td>
+				<p><br><br/><strong><a name="clausula198">CLAUSULA 197</a></strong>&nbsp;&nbsp;&nbsp;El Acuerdo Marco firmado entre Empresa y Sindicato el 11 de mayo del 2009 forma parte integrante del presente Contrato Colectivo de Trabajo, en todo su contexto tanto en sus declaraciones como en su clausulado, en el que destacan los siguientes conceptos:<br></br>
+
+					<center><table border="0" width="85%">
+					<tr>
+					<td>
+					<p>
+					<strong>a)</strong>Visión Común.<br></br>
+					<strong>b)</strong>Inversión.<br></br>
+					<strong>c)</strong>Crecimiento.<br></br>
+					<strong>d)</strong>Capacitación y Comunicación.<br></br>
+					<strong>e)</strong>Servicios Multimedia y Materia de Trabajo.<br></br>
+					<strong>f)</strong>Crecimiento del Empleo (vacantes).<br></br>
+					<strong>g)</strong>Evolución de la Relación Laboral.<br></br>
+					<strong>h)</strong>Calidad de Servicio.<br></br>
+					<strong>i)</strong>Jubilación.<br></br>
+					<strong>j)</strong>Sentido integral y vinculación del Acuerdo.<br></br>
+					</p></td></tr></table></center>	
+				Empresa y Sindicato se comprometen a realizar una evaluación bimestral sobre los avances de cumplimiento de dicho Acuerdo en todos sus conceptos para corregir cualquier desviación o solucionar cualquier discrepanciaque pudiera presentarse. (Se anexa copia del Acuerdo Marco).<br></br>
+				</p>
+			</tr>
+
+			<tr><td>
+				<p><br><br/><strong><a name="clausula198">CLAUSULA 198</a></strong>&nbsp;&nbsp;&nbsp;
+				</p>
+			</tr>
+
+
 
 		
 		</table>
