--- a/index.html
+++ b/index.html
@@ -954,16 +954,16 @@
 					<tr>
 					<td>
 					<p>
-					<strong>a)</strong> El pago del tiempo ordinario se hará al terminar la semana.<br>
-					<strong>b)</strong> El pago de tiempo extraordinario, sobresalarios, substituciones y habilitaciones, se hará a la mayor brevedad posible, pero como máximo en el primer pago después de los 15 días siguientes a la fecha en que se hubiere laborado, debiendo la Empresa entregar copia al Sindicato del reporte correspondiente a dichos conceptos.<br>
-					<strong>c)</strong> El pago por comisiones se hará mensualmente.<br>
+					<strong>a)</strong> El pago del tiempo ordinario se hará al terminar la semana.<br></br> 
+					<strong>b)</strong> El pago de tiempo extraordinario, sobresalarios, substituciones y habilitaciones, se hará a la mayor brevedad posible, pero como máximo en el primer pago después de los 15 días siguientes a la fecha en que se hubiere laborado, debiendo la Empresa entregar copia al Sindicato del reporte correspondiente a dichos conceptos.<br></br> 
+					<strong>c)</strong> El pago por comisiones se hará mensualmente.<br></br> 
 					<strong>d)</strong> El pago de trabajadores pensionados se hará semanariamente.
 					</p></td></tr></table></center>
 				</p>
 			</tr>
 
 			<tr><td>
-				<p><br><strong><a name="clausula111">CLAUSULA 111</a></strong>&nbsp;&nbsp;&nbsp;La Empresa anticipará cantidades a cuenta de viáticos a los trabajadores y las trabajadoras y adelantará el pago de los salarios correspondientes a las vacaciones de los mismos cuando vayan a disfrutarlas.
+				<p><br></br> <strong><a name="clausula111">CLAUSULA 111</a></strong>&nbsp;&nbsp;&nbsp;La Empresa anticipará cantidades a cuenta de viáticos a los trabajadores y las trabajadoras y adelantará el pago de los salarios correspondientes a las vacaciones de los mismos cuando vayan a disfrutarlas.
 				</p>
 			</tr>
 
