--- a/index.html
+++ b/index.html
@@ -992,7 +992,7 @@
 							</p></td></tr></table></center>
 					<strong>b)</strong> Los trabajadores que no siendo pagadores tengan que manejar dinero por asuntos de pago de salarios al personal, recibirán la cantidad de $1.00 (un peso 00/100 M.N.) por jornada legal o la cantidad proporcional al tiempo que lo hagan exceptuando a los Cajeros.<br></br>
 					<strong>c)</strong> Los trabajadores residentes en los lugares que a continuación se mencionan, recibirán el porcentaje siguiente sobre la cuota diaria tabulada:<br></br>
-							<center><table border="0" width="95%">
+							<!--<center><table border="0" width="95%">
 							<tr>
 									<td><strong>SECCIÓN</strong></td>    
 									<td><strong>PORCENTAJE</strong></td> 
@@ -1676,7 +1676,7 @@
 								<td>	ZITACUARO, MICH.	</td>	
 								<td>	5.00%	<br></br></td>
 							</tr>
-						</table></center>
+						</table></center> -->
 
 
 					<strong>d)</strong> En las subalternas ya establecidas, o que en el futuro se establezcan, en que no se necesite nombrar un empleado especial para manejar asuntos de la Dirección Comercial, las Encargadas de Tráfico los atenderán y manejarán, recibiendo como compensación un sobresalario cuyo monto estará en proporción con el número de líneas locales en servicio, de acuerdo con la siguiente tabla:<br></br>
